# linux-market

./: .env.example  .env.local.example  .gitignore  .vercelignore  CONTRIBUTING.md  DEVELOPER.md  INSTALACION.md  LICENSE  README.md  com.linuxmarket.pos.yml  linux-market.desktop  linuxmarket.db  next.config.mjs  package.json  pnpm-lock.yaml  server.js  upload-release.js
__tests__/: auth.test.js
app/: .page.tsx.swp  api  central  globals.css  layout.tsx  page.tsx  providers.tsx  store  superadmin
app/install/: page.tsx
components/: ai-advisor.tsx  hardware-detector.tsx  hero-animation.tsx  payment-modal.tsx  premium-ui.tsx  tauri-titlebar.tsx  theme-toggle.tsx
components/marketing/: GallerySection.tsx  useGithubStats.ts
dist-server-bundle/: index.js
hooks/: use-currency.ts  use-realtime.ts  use-scanner.ts
lib/: api.ts  auth-context.tsx  db.ts  i18n-context.tsx  settings-context.tsx
pos-local/: POS_LOCAL_SETUP.md  package.json
pos-local/analytics-engine/: predictor.js
pos-local/backend/: server.js
pos-local/database/: schema.sql
pos-local/frontend/: index.html
pos-local/installer/: install.sh
scripts/: build-native.sh  check-system.sh  cleanup.sh  diagnostic.sh  flathub-check.sh  install-arch.sh  install-debian.sh  install-fedora.sh  install-windows.ps1  reinstall-fix.sh  setup.js
server/config/: env.js
snap/: snapcraft.yaml
src-tauri/: Cargo.toml  com.linuxmarket.pos.metainfo.xml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: post-install.sh  postinst
src-tauri/src/: main.rs
(+34 files in other folders)
