[package]
name = "linux-market"
version = "1.2.3"
description = "POS free para Linux y un pequeño grano de arena para la comunidad"
authors = ["Alexis Gabriel Lugo Villeda <alexglv2000@gmail.com>"]
license = "MIT"
homepage = "https://linux-market.vercel.app/"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
